Changed opacity of watermark/added scrolling of ItemsControl items

--- a/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
+++ b/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
@@ -46,10 +46,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="HelixToolkit">
-      <HintPath>..\packages\HelixToolkit.2014.2.452\lib\portable-net4+sl4+wp71+win8\HelixToolkit.dll</HintPath>
+      <HintPath>..\packages\HelixToolkit.2015.1.453\lib\portable-net4+sl4+wp71+win8\HelixToolkit.dll</HintPath>
     </Reference>
     <Reference Include="HelixToolkit.Wpf">
-      <HintPath>..\packages\HelixToolkit.Wpf.2014.2.452\lib\net45\HelixToolkit.Wpf.dll</HintPath>
+      <HintPath>..\packages\HelixToolkit.Wpf.2015.1.453\lib\net45\HelixToolkit.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Kinect, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Practices.Prism.Composition, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -152,7 +152,6 @@
     <Compile Include="ViewModel\KinectViewModel.cs" />
     <Compile Include="ViewModel\KinectViewModelLoader.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
-    <Compile Include="View\Canvases\CanvasManager.cs" />
     <Compile Include="View\Canvases\ScrollableCanvas.cs" />
     <Compile Include="View\Helpers\DataTemplate3D.cs" />
     <Compile Include="View\Helpers\ItemsVisual3D.cs" />
@@ -205,7 +204,9 @@
   <ItemGroup>
     <None Include="Resources\Models\Hat.mtl" />
     <None Include="Resources\Models\Hat.obj" />
-    <None Include="Resources\Models\skirt.obj" />
+    <None Include="Resources\Models\skirt.obj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Resources\tshirt.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -261,7 +262,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Models\skirt_denim.bmp" />
+    <None Include="Resources\Models\skirt_denim.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Resources\Menu\menu.png" />
   </ItemGroup>
   <ItemGroup>
