--- a/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
+++ b/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
@@ -42,8 +42,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="HelixToolkit">
@@ -157,7 +156,7 @@
     <Compile Include="ViewModel\KinectViewModel.cs" />
     <Compile Include="ViewModel\KinectViewModelLoader.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
-    <Compile Include="View\Buttons\KinectScreenShotButton.cs" />
+    <Compile Include="View\Buttons\KinectScreenshotButton.cs" />
     <Compile Include="View\Buttons\KinectSizeButton.cs" />
     <Compile Include="View\Helpers\HandProperties.cs" />
     <Compile Include="View\Canvases\ScrollableCanvas.cs" />
@@ -479,7 +478,6 @@
     <Resource Include="Resources\Images\Skirts\short_skirt_denim.png" />
     <Resource Include="Resources\Images\Skirts\short_skirt_green.png" />
     <Resource Include="Resources\Images\Skirts\short_skirt_red.png" />
-    <Resource Include="Resources\Images\Skirts\simple_skirt_violet.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Images\Hats\cowboy_dark.png" />
@@ -550,6 +548,9 @@
     <None Include="Resources\Materials\short_skirt_denim.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
